[package]
name = "tic-tac-toe"
version = "0.1.0"
authors = ["kelsier"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.4.0"
crossterm = "0.19.0"
bevy = { version = "0.4", default-features = false }
bevy_crossterm = { git = "https://github.com/octotep/bevy_crossterm", branch = "trunk" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

